examples/datalog/20_applications/08_version_conflicts.dl.out
Executing script: examples/datalog/20_applications/08_version_conflicts.dl

> .db create test_conflicts
Database 'test_conflicts' created.
Switched to database: test_conflicts
> .db use test_conflicts
Switched to database: test_conflicts
> +requires[(1, 100, 1, 3), (1, 101, 2, 5), (2, 100, 2, 4), (2, 101, 1, 2), (3, 100, 4, 6), (3, 102, 1, 10)].
Inserted 6 facts into 'requires'.
> +root_pkg[(1), (2)].
Inserted 2 facts into 'root_pkg'.
> +root_requires(Dep, MinV, MaxV) :- root_pkg(Pkg), requires(Pkg, Dep, MinV, MaxV).
Rule 'root_requires' registered.
> ?- root_requires(D, Min, Max).
4 rows:
  (100, 1, 3)
  (100, 2, 4)
  (101, 1, 2)
  (101, 2, 5)
> +version_conflict(Dep, Pkg1, Pkg2) :- requires(Pkg1, Dep, Min1, Max1), requires(Pkg2, Dep, Min2, Max2), Pkg1 < Pkg2, Max1 < Min2.
Rule 'version_conflict' registered.
> +version_conflict(Dep, Pkg1, Pkg2) :- requires(Pkg1, Dep, Min1, Max1), requires(Pkg2, Dep, Min2, Max2), Pkg1 < Pkg2, Max2 < Min1.
Rule added to 'version_conflict' (2 rules total).
> ?- version_conflict(Dep, P1, P2).
Script error: Line 30: Query execution failed: Unsupported ordering constraint pattern
